<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/gettingStartedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/gettingStarted"/>

        <ImageView
            android:id="@+id/oneImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/one"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_alignLeft="@+id/gettingStartedTextView"
            android:layout_below="@+id/gettingStartedTextView"/>
        <ImageView
            android:id="@+id/twoImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/oneImageView"
            android:layout_below="@+id/gettingStartedTextView"
            android:layout_marginLeft="10dp"
            android:src="@drawable/two"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/three"
            android:layout_toRightOf="@+id/twoImageView"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/gettingStartedTextView"/>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3">

        <TextView
            android:id="@+id/createCareCircleTextView"
            android:text="@string/createCircleText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_margin="30dp"/>

        <Button
            android:id="@+id/cccButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/createCareCircleTextView"
            android:layout_margin="50dp"
            android:onClick="onCCCclick"
            android:text="@string/createCareCircleButton"
            android:textAllCaps="false"/>
    </RelativeLayout>

</LinearLayout>